--- a/cal.css
+++ b/cal.css
@@ -1,46 +1,46 @@
+body{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background:linear-gradient(45deg, rgb(225, 79, 39), rgb(30, 133, 250));
+}
+.body{
+  box-shadow: 0px 0px 30px rgba(0,0,0,0.9);
+  padding: 100px;
+  padding-left: 70px;
+  padding-right: 70px;
+  border-radius: 40px;
+}
+#input-button{
+  width: 300px;
+  height: 60px;
+  font-size: 40px;
+  border-radius: 10px;
+  border: none;
+  text-align: right;
+  background-color: transparent;
+  box-shadow: 0px 0px 5px rgba(248, 252, 5, 9);
+  color: white;
+}
+input-button::placeholder{
+  color: rgb(253, 243, 243);
+}
+button{
+  border: none;
+  background: transparent;
+  color: white;
+  width: 55px;
+  height: 55px;
+  margin: 10px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 5px rgba(252, 248, 13, 0.792);
+  cursor: pointer;
+  transition: background 0.18s;
+}
+button:hover{
+  background: white;
+  color: black;
+}
 
-    body{
-      width: 100%;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background:linear-gradient(to right, rgb(5, 62, 248), rgb(189, 6, 255));
-    }
-    .body{
-      box-shadow: 0px 0px 7px rgba(0,0,0,0.9);
-      padding: 100px;
-      padding-left: 70px;
-      padding-right: 70px;
-      
-    }
-    #input-button{
-      width: 300px;
-      height: 60px;
-      font-size: 40px;
-      border-radius: 10px;
-      border: none;
-      text-align: right;
-      background-color: transparent;
-      box-shadow: 0px 0px 4px rgba(248, 252, 5, 9);
-      color: white;
-    }
-    input-button::placeholder{
-      color: white;
-    }
-    button{
-      border: none;
-      background: transparent;
-      color: white;
-      width: 55px;
-      height: 55px;
-      margin: 10px;
-      border-radius: 50%;
-      box-shadow: 0px 0px 5px rgba(248, 252, 5, 0.9);
-      cursor: pointer;
-      transition: background 0.18s;
-    }
-    button:hover{
-      background: white;
-      color: black;
-    }
